--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -36,58 +36,67 @@
 
   <div id="main-content" class="container-fluid">
     <div id="content" class="row">
-      <div id="chicken" class="col-xs-12">
-        <h2 class="text-center">Chicken</h2>
-        <p>Chickens are arguably the most abused animals on the planet. In the United States, approximately 9 billion chickens are killed for their flesh each year, and 305 million hens are used for their eggs. The vast majority of these animals spend their lives in total confinement—from the moment they hatch until the day they are killed.
+      <div class="col-md-4 col-sm-6 col-xs-12 box">
+        <div id="chicken">
+          <h3 class="text-center">Chicken</h3>
+          <p>Chickens are arguably the most abused animals on the planet. In the United States, approximately 9 billion chickens are killed for their flesh each year, and 305 million hens are used for their eggs. The vast majority of these animals spend their lives in total confinement—from the moment they hatch until the day they are killed.
 
-          More chickens are raised and killed for food than all other land animals combined, yet not a single federal law protects them from abuse—even though most Americans say that they would support such a law.
+            More chickens are raised and killed for food than all other land animals combined, yet not a single federal law protects them from abuse—even though most Americans say that they would support such a law.
 
-          Chickens are inquisitive, interesting animals who are as intelligent as mammals such as cats, dogs, and even some primates. They are very social and like to spend their days together, scratching for food, taking dust baths, roosting in trees, and lying in the sun.
+            Chickens are inquisitive, interesting animals who are as intelligent as mammals such as cats, dogs, and even some primates. They are very social and like to spend their days together, scratching for food, taking dust baths, roosting in trees, and lying in the sun.
 
-          But chickens raised on factory farms each year in the U.S. never have the chance to do anything that’s natural or important to them. A baby chick on a factory farm will never be allowed contact with his or her parents, let alone be raised by them. These chickens are deprived of the chance to take dust baths, feel the warmth of the sun on their backs, breathe fresh air, roost in trees, and build nests.
+            But chickens raised on factory farms each year in the U.S. never have the chance to do anything that’s natural or important to them. A baby chick on a factory farm will never be allowed contact with his or her parents, let alone be raised by them. These chickens are deprived of the chance to take dust baths, feel the warmth of the sun on their backs, breathe fresh air, roost in trees, and build nests.
 
-          Chickens raised for their flesh, called “broilers” by the chicken industry, spend their entire lives in filthy sheds with tens of thousands of other birds, where intense crowding and confinement lead to outbreaks of disease. They’re bred and drugged to grow so large so quickly that their legs and organs can’t keep up, making heart attacks, organ failure, and crippling leg deformities common. Many become crippled under their own weight and eventually die because they can’t reach the water nozzles. When they are only 6 or 7 weeks old, they’re crammed into cages and trucked to slaughter.
+            Chickens raised for their flesh, called “broilers” by the chicken industry, spend their entire lives in filthy sheds with tens of thousands of other birds, where intense crowding and confinement lead to outbreaks of disease. They’re bred and drugged to grow so large so quickly that their legs and organs can’t keep up, making heart attacks, organ failure, and crippling leg deformities common. Many become crippled under their own weight and eventually die because they can’t reach the water nozzles. When they are only 6 or 7 weeks old, they’re crammed into cages and trucked to slaughter.
 
-          Birds exploited for their eggs, called “laying hens” by the industry, are crammed together inside wire cages where they don’t even have enough room to spread their wings. Because the hens are crammed so closely together, these normally clean animals are forced to urinate and defecate on one another. The birds have part of their sensitive beaks cut off so that they won’t peck each other out of frustration created by the unnatural confinement. After their bodies are exhausted and their egg production drops, they are shipped to slaughter, generally to be turned into chicken soup or cat or dog food because their flesh is too bruised and battered to be used for much else.
+            Birds exploited for their eggs, called “laying hens” by the industry, are crammed together inside wire cages where they don’t even have enough room to spread their wings. Because the hens are crammed so closely together, these normally clean animals are forced to urinate and defecate on one another. The birds have part of their sensitive beaks cut off so that they won’t peck each other out of frustration created by the unnatural confinement. After their bodies are exhausted and their egg production drops, they are shipped to slaughter, generally to be turned into chicken soup or cat or dog food because their flesh is too bruised and battered to be used for much else.
 
-          Because the male chicks of egg-laying breeder hens are unable to lay eggs and are not bred to produce excessive flesh for the meat industry, they are killed. Every year, 200 million of these young birds are ground up alive or tossed into bags to suffocate.
+            Because the male chicks of egg-laying breeder hens are unable to lay eggs and are not bred to produce excessive flesh for the meat industry, they are killed. Every year, 200 million of these young birds are ground up alive or tossed into bags to suffocate.
 
-          Chickens are slammed into small crates and trucked to the slaughterhouse through all weather extremes. Hundreds of millions sustain broken wings and legs from rough handling, and millions die from the stress of the journey.
+            Chickens are slammed into small crates and trucked to the slaughterhouse through all weather extremes. Hundreds of millions sustain broken wings and legs from rough handling, and millions die from the stress of the journey.
 
-          At the slaughterhouse, their legs are forced into shackles, their throats are cut, and they’re immersed in scalding-hot water to remove their feathers. Because they have no federal legal protection (birds are exempt from the Humane Slaughter Act), almost all chickens are still conscious when their throats are cut, and many are literally scalded to death in the feather-removal tanks after missing the throat cutter.
+            At the slaughterhouse, their legs are forced into shackles, their throats are cut, and they’re immersed in scalding-hot water to remove their feathers. Because they have no federal legal protection (birds are exempt from the Humane Slaughter Act), almost all chickens are still conscious when their throats are cut, and many are literally scalded to death in the feather-removal tanks after missing the throat cutter.
 
-          You can help end this cruelty. Order PETA’s free vegan starter kit, and we’ll send you tips and recipes to help you remove chickens and other animals from your diet today.</p>
-        </div>
-        <div id="beef" class="col-xs-12">
-          <h2 class="text-center">Beef</h2>
-          <p>To mark cows for identification, ranchers restrain the animals and press hot fire irons into their flesh, causing third-degree burns, as the cows bellow in pain and attempt to escape. Male calves’ testicles are ripped from their scrotums, often without pain relievers, and the horns of cows raised for beef are cut or burned off. 
-
-            While “on the range,” most cows receive inadequate veterinary care, and as a result, many die from infection and injury. Every winter, cattle freeze to death in states such as Montana, Nebraska, and North Dakota. And every summer, cows collapse from heatstroke in states such as Texas and Arizona.
-
-            After about a year of facing the elements, cows are shipped to an auction lot and then across hundreds of miles to massive feedlots—feces- and mud-filled holding pens where they are crammed together by the thousands. Many arrive crippled or dead from the journey.
-
-            Cattle on feedlots are fed a highly unnatural diet to fatten them up. This causes chronic digestive pain—imagine your worst case of gastritis that never goes away. The stomach becomes so full of gas (a condition called bloat) that breathing is impaired because of compression of the lungs. According to a study published in the Journal of Animal Science, this diet also causes potentially fatal liver abscesses in as many as 32 percent of cattle raised for beef. Those animals who escape this fate may still suffer from a severe increase in stomach acid, causing ulcers to form, resulting in a condition (acute acidosis) in which bloody fluid rushes into the rumen and kills the cow. 
-
-            The feedlot air is saturated with ammonia, methane, and other noxious chemicals, which build up from the huge amounts of manure, and the cows are forced to inhale these gases constantly. These fumes can give the cows chronic respiratory problems, making breathing painful.
-
-            Cattle raised for food are also regularly dosed with drugs such as antibiotics to make them grow faster and keep them alive in these miserable conditions. Instead of taking sick cattle to see a veterinarian, many feedlot owners simply give the animals even higher doses of human-grade antibiotics in an attempt to keep them alive long enough to make it to the slaughterhouse.
-
-            Take PETA’s Pledge to Be Vegan for 30 Days and try removing beef and other meat from your diet. After a month, you’ll see how much better you feel, and you’ll be happy knowing that you are doing your part to help put an end to this cruelty.</p>
+            You can help end this cruelty. Order PETA’s free vegan starter kit, and we’ll send you tips and recipes to help you remove chickens and other animals from your diet today.</p>
+            <a href="#menu_title">Back to Top</a>
           </div>
-          <div id="sushi" class="col-xs-12">
-            <h2 class="text-center">Sushi</h2>
-            <p>Fish are smart, interesting animals with their own unique personalities, and just like dogs, cats, and humans, fish feel pain. Scientists who study pain are in complete agreement that the fish pain response is basically identical to the pain response system in mammals and birds.
+        </div>
+        <div class="col-md-4 col-sm-6 col-xs-12 box">
+          <div id="beef">
+            <h3 class="text-center">Beef</h3>
+            <p>To mark cows for identification, ranchers restrain the animals and press hot fire irons into their flesh, causing third-degree burns, as the cows bellow in pain and attempt to escape. Male calves’ testicles are ripped from their scrotums, often without pain relievers, and the horns of cows raised for beef are cut or burned off. 
 
-              Did you know that fish can also learn to avoid nets by watching other fish in their group and that they can recognize individual “shoal mates”? Some fish gather information by eavesdropping on others, and some—such as the South African fish who lay eggs on leaves so that they can carry them to a safe place—even use tools.
+              While “on the range,” most cows receive inadequate veterinary care, and as a result, many die from infection and injury. Every winter, cattle freeze to death in states such as Montana, Nebraska, and North Dakota. And every summer, cows collapse from heatstroke in states such as Texas and Arizona.
 
-              Sadly, the U.S. fish industry slaughters more than 6 billion fish each year, and sport fishing and angling kill another 245 million animals annually. Without any legal protection from cruel treatment, these intelligent, complex animals are impaled, crushed, suffocated, or sliced open and gutted, all while they’re fully conscious.
-              More than 40 percent of all the fish consumed each year are now raised on land- or ocean-based aquafarms. Land-based farms raise thousands of fish in ponds, pools, or concrete tanks. Ocean-based aquafarms are situated close to shorelines, and fish in these farms are confined to cramped net or mesh cages.
+              After about a year of facing the elements, cows are shipped to an auction lot and then across hundreds of miles to massive feedlots—feces- and mud-filled holding pens where they are crammed together by the thousands. Many arrive crippled or dead from the journey.
 
-              Fish on aquafarms spend their entire lives in crowded, filthy enclosures, and many suffer from parasitic infections, diseases, and debilitating injuries. Conditions on some farms are so horrendous that 40 percent of the fish may die before farmers can kill and package them for food. Fish who survive are starved before they are sent to slaughter in order to reduce waste contamination of the water during transport. Salmon, for example, are starved for 10 full days.
+              Cattle on feedlots are fed a highly unnatural diet to fatten them up. This causes chronic digestive pain—imagine your worst case of gastritis that never goes away. The stomach becomes so full of gas (a condition called bloat) that breathing is impaired because of compression of the lungs. According to a study published in the Journal of Animal Science, this diet also causes potentially fatal liver abscesses in as many as 32 percent of cattle raised for beef. Those animals who escape this fate may still suffer from a severe increase in stomach acid, causing ulcers to form, resulting in a condition (acute acidosis) in which bloody fluid rushes into the rumen and kills the cow. 
 
-              In the wild, hundreds of billions of fish—along with “nontarget” animals, including sharks, sea turtles, birds, seals, and whales—are caught each year in ocean-ravaging nets or dragged for hours on long-lines for the commercial fishing industry.
+              The feedlot air is saturated with ammonia, methane, and other noxious chemicals, which build up from the huge amounts of manure, and the cows are forced to inhale these gases constantly. These fumes can give the cows chronic respiratory problems, making breathing painful.
 
-              Whether the fish are raised on aquafarms, caught in the ocean by giant nets or long-lines, or hooked at the end of a fishing line, eating them supports cruelty to animals. Order PETA’s free vegetarian/vegan starter kit for great tips and recipes to help you make the transition to a fish-free vegan diet.</p>
+              Cattle raised for food are also regularly dosed with drugs such as antibiotics to make them grow faster and keep them alive in these miserable conditions. Instead of taking sick cattle to see a veterinarian, many feedlot owners simply give the animals even higher doses of human-grade antibiotics in an attempt to keep them alive long enough to make it to the slaughterhouse.
+
+              Take PETA’s Pledge to Be Vegan for 30 Days and try removing beef and other meat from your diet. After a month, you’ll see how much better you feel, and you’ll be happy knowing that you are doing your part to help put an end to this cruelty.</p>
+              <a href="#menu_title">Back to Top</a>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-12 col-xs-12 box">
+            <div id="sushi">
+              <h3 class="text-center">Sushi</h3>
+              <p>Fish are smart, interesting animals with their own unique personalities, and just like dogs, cats, and humans, fish feel pain. Scientists who study pain are in complete agreement that the fish pain response is basically identical to the pain response system in mammals and birds.
+
+                Did you know that fish can also learn to avoid nets by watching other fish in their group and that they can recognize individual “shoal mates”? Some fish gather information by eavesdropping on others, and some—such as the South African fish who lay eggs on leaves so that they can carry them to a safe place—even use tools.
+
+                Sadly, the U.S. fish industry slaughters more than 6 billion fish each year, and sport fishing and angling kill another 245 million animals annually. Without any legal protection from cruel treatment, these intelligent, complex animals are impaled, crushed, suffocated, or sliced open and gutted, all while they’re fully conscious.
+                More than 40 percent of all the fish consumed each year are now raised on land- or ocean-based aquafarms. Land-based farms raise thousands of fish in ponds, pools, or concrete tanks. Ocean-based aquafarms are situated close to shorelines, and fish in these farms are confined to cramped net or mesh cages.
+
+                Fish on aquafarms spend their entire lives in crowded, filthy enclosures, and many suffer from parasitic infections, diseases, and debilitating injuries. Conditions on some farms are so horrendous that 40 percent of the fish may die before farmers can kill and package them for food. Fish who survive are starved before they are sent to slaughter in order to reduce waste contamination of the water during transport. Salmon, for example, are starved for 10 full days.
+
+                In the wild, hundreds of billions of fish—along with “nontarget” animals, including sharks, sea turtles, birds, seals, and whales—are caught each year in ocean-ravaging nets or dragged for hours on long-lines for the commercial fishing industry.
+
+                Whether the fish are raised on aquafarms, caught in the ocean by giant nets or long-lines, or hooked at the end of a fishing line, eating them supports cruelty to animals. Order PETA’s free vegetarian/vegan starter kit for great tips and recipes to help you make the transition to a fish-free vegan diet.</p>
+                <a href="#menu_title">Back to Top</a>
+              </div>
             </div>
           </div><!-- End of #home-tiles -->
         </div><!-- End of #main-content -->
